@@ -21,6 +21,7 @@ DIST parallel_studio_xe_2013_update4.tgz 2184817121 SHA256 55d549fc34f7a9eb96951
 DIST parallel_studio_xe_2013_update4_ia32.tgz 1220177902 SHA256 5bd75b2747f4b787b8128a83914b060d156ecdc41236f4100363b7ab4f9f6859 SHA512 968db307e08cd31450200abd41ade1f2b2855f4b5cb19911d03c1cd357cab11cbba814db354452496fcf66fc3fad1423b24f428bd4db07402f12bd63e4d34247 WHIRLPOOL f2b03ebb78960718a15fc69be814eeb7996fdd7575720f4b09cb915086cc757fea188ef5ceb7e37ed00c995e11ae544d8bd55aba8ab2d12530e26b3d23362f3e
 DIST parallel_studio_xe_2013_update4_intel64.tgz 1520767493 SHA256 31383f357b9b7d9c76e727e63427387d9ee42358f5b5df75a0d8766cd318a11d SHA512 497ad8f3473e1d11cdd31dff340a8e6ec1f012e731def084b2072146b5d11db906f85ace53b2223c3fbef949222f73f36783fd697eb7809464f4403c0ac8744a WHIRLPOOL d08447f27aee0f088797968d541fe98e3813a1daf5b87024d37493663238594c3e4e75a8d9636a4059191782f5eae9065d45b7ad2c27e1f73fc74eb110ad399f
 DIST parallel_studio_xe_2015.tgz 3819862086 SHA256 31abe447b1db457b38547dfbf0fd7e434cb45d5734892ec3ef95ef5f4d2f8ae2 SHA512 889844fe067d1b1095283686f1b1657aab2bbda2a7e9014aec88a0ef1af8c8a0e1da3a4414600d4b450b2a1b4b13496b5165e495ccdf3187c27f58eaff07b13b WHIRLPOOL c2be966c8910d8995b845e25d60ceb700bfe9bc78daf60e97fd016de6e1abc60bb0f4fe33e2cd7c8960ebbf1540d418524414a351ed9256a80cdee4e29166961
+DIST parallel_studio_xe_2015_update1.tgz 4044230603 SHA256 84fdf48d1de20e1d580ba5d419a5bc1c55d217a4f5dc1807190ecffe0229a62b SHA512 894c911dce9d261fbe67d65c91c3b6c7117b183102fe7673a5e106d14994a082fdf03fdb573bbb1a9f0a01cf1539082b72ec75c39db7590bb2f63222f9a5b832 WHIRLPOOL f43b219ba82aa3f94c6818c54b971302f3693cb1c0266924f7ee79c67d6008699388afedaf4b2f72e969a73c8fd7d276309d80ff4dc8dfb1ba766cbe19b33872
 EBUILD intel-common-13.0.0.079-r1.ebuild 1706 SHA256 59601e4f34a9b13371e6e5e68e71cc7b683e7ab17c1dbb1b5f1eb66c8b94737d SHA512 81beffa34fc147e70bc3a0364b7b807c5e83077a212e601e4495e47b33a12b8b173b7e4aa67b0a703337205efb1d4318866083f74b653144b6f1e4539271d4c3 WHIRLPOOL 5cf22a627d40b038a00f7b4cc98051e283b2342a60e031e73442b58dfe1b1bb3db23af2add4f772d0470d7e304535b9f5459b36ba7e3425eb4c5888c7d16651f
 EBUILD intel-common-13.0.0.079.ebuild 1574 SHA256 71907fb44a71a3b40ca6bbe239233ab56ee8b8c9f41fd3c2a436d95bb0338c72 SHA512 3f61d31682c7585635c5a1061195fc3a449051fb8c86f82b66573e4f33040a5ee9b2f0ea9827a3aab11ef8ee4c5e289c63013d0f4af7d8717682988bfa74dee4 WHIRLPOOL e61a8c5dffcb6871ca96ad21397f45fc3171112c8c7e6e233a4c857c560279f4beb065e895a707427de598a0d10fb4e0a09400fd6566fdfbff4c497456b1ef98
 EBUILD intel-common-13.0.1.117.ebuild 1673 SHA256 b5d62545429f2b32d12624c1c8d37781fe4c8ea0b70c21c48056eea5b3cac314 SHA512 ccaf7e0905ef2d7a568bf8aa0f1ce591ad4f455c039ca62262343d6b61aa407f7a68096ea12291d663e93b82c3842a7a57af2a312454237a2edf51216a7e6e9f WHIRLPOOL b8db45203171f6a4c0596c241ac060c342562c2b45cc72f3d8fe5793c114a70617c42ec96f04455d64641f5271e6c0cf898102f943ff1209328d4d4463510ee0
@@ -32,24 +33,25 @@ EBUILD intel-common-14.0.1.106.ebuild 1701 SHA256 e3552b51829ae1f04571dc23052cd3
 EBUILD intel-common-14.0.2.144.ebuild 1701 SHA256 6ba8e041f3476567f734cc190c6a2b8fb0947e3b39873c55752792c14d0dbd5c SHA512 ef9303d9f840d3dd55d8326bd1f62ea72569ee873080c01cb4b81fed0435b1be523f1a3978f2f32a4e1f7c078cf5d32857e193178d9aedc77e685c0c63422f7c WHIRLPOOL a1689e1d63d54c4b15ec782fe2cb74c74717d8c0d1ea3aa0bb69f6299fb6fa5a2da54d295ae597a6978909c3c22f07224b9a87a1a2dcfa89fde347643c317f9d
 EBUILD intel-common-14.0.3.174.ebuild 1701 SHA256 eecc54b7c4a8766f7d1963cfdb40479e803de0400d94710ecdebfb7e44449c97 SHA512 4c5ba0b6aa4c221794bec08ce4db17737fdd7ff5c6114119246f9479891f7bb51d5b6af0f03ab7beef868759bd4c1c523b1f43cd478216ec3fede96a92c93184 WHIRLPOOL e22e67d412a6fc75bf13b65e00011e18724308528ab2575e5c19d4f340ed79c55f64a49e5c69db7b0053a4e25e37586c2d83c87751e0bb7213378a0cd8673aec
 EBUILD intel-common-15.0.0.090-r1.ebuild 1739 SHA256 a3c3e66f7fe7a0a0fd1552b43bd15d9d252ab23483348854b498c16308da2666 SHA512 4bde910b909bf2fe7d87e1343bf9528e0d6b2baa4649eb72245af9cc02894898f99b01502ea2244e69dd8c87c9ac1a670ab640a571bf9698b4120aa9e1023b7e WHIRLPOOL e45d092cdeb2dca71c1a80ae4279076734a143277c0b014c7308a6f5b138eec5cd7d8efc683f38bbe54530aa8f1e6b31265bf28df316d65bb5a0fbc6761f75ff
-MISC ChangeLog 2655 SHA256 6723f6de3c49ebede9b96682f31ab0df5c3f6322ab7c671454a05dfab039adb4 SHA512 191fcd9ca0d59a2118eb44ae21cc460ad86cdc5fbff54bccc57562f3620aac299d4d538b5733338061690674c66cc7e140f1ca8b0593692c88d3571c8837cc0e WHIRLPOOL d9ef15b4c5c3688999f91ed9ceaf04ec814467f73ad4134b6a14d32e38df0bedbc860812c736a825b1fc95f7f17764fed2ebf8674cb6df059752cf588c07ebb8
+EBUILD intel-common-15.0.1.133.ebuild 1744 SHA256 25e40ee459d484bc9369b95dc75ad48bd4a5547d52ee839f356a9acd57f8ec10 SHA512 3c8196784f1e22fbe7b7f92dbaf087d2fb23c419e3ea32d77494f0421a4ee96c16e460ad8dedf58817ea2cb606ed74985b602da3d31bfe588824c6f38ecec86f WHIRLPOOL 2e49356850f956fd7ad2c56d2e1a56b8721100767e7fdb0b7a4b501ae050b14a24e01b607d79b6c2d9306a111c5981730f711bd039e02dbfbb7a7c76fc2dce7c
+MISC ChangeLog 2791 SHA256 2391255d57975e236f1b1d1921cdc02826f92f871125ed9dface5298fdf165de SHA512 b37054f019b98d300016fe82471ca230d0f27dc204881889a9691c27e83dc8e3127fbe19f05a4efc367b5b12fcb91f06587d58d87fe645fd89e77c2b98cfa112 WHIRLPOOL 460d74283ca023aaaab6ddfb3c2a594aba02e37e7d0ca67484a1fbb325e5b1540ecf79fceb7e28f4ce51f6ff8d7fcaa497ec028d515e5d5418f9f7e4182fb876
 MISC metadata.xml 456 SHA256 038f36c99bd81c701eeda609280aaa6458cba61eb4204e844f3b033153b84714 SHA512 c178ce0f9532bb27e87a44177e5ed9b9767d8055047cdfbef54644f0641c7e4e097deb70f7597e2ed168ef48ca8d1cc0a16f5e638d92ecd8c0ea8b6d51921782 WHIRLPOOL fa9bc34101eaade24eda166467bc8857c38b6ba2cddc5a9993b61dcc07013b879616a2517e99879f44fc8138f67ff4cc096be5a79d7f34b4a58f94a9e52b1fff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUFty9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJUe1cPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirE/wP/1n3eKmJnCm6gsAhO8WiqgPo
-0D6VwDdJqtX0EugfkbA950mVM6yB7jflSYEXzF3GU/4gAynoSKy0TJ53YmHTN9OG
-QzR9H95lc7B44mm9FQUQTGHCFgp0s78ink67vOcF6RpoumZ7Igz6qV1QSlZvNGP4
-mO9j/nGfvmYn9uE9s/ATh+9Qpdm9GkD4oYqA+EgMzSUm/+HOeUsuKI8q/hKWkosI
-v5v/A3qfdSEn+193h1JEcWqPXLescN0Jb012KhTZWht3CZvbEsLkK5Q4b4LOp8EO
-tzn0yydwLOJTQaE4Srif6nkfA3aihA6PEV111rUkcaFNFT2Gp127vJbhAVuis5Qw
-/wPAvOgxhKdgKSmNtTNnS60cuICUwHbDHRTo53hnZL9EwkqcQ9HwLbFPzbc48J5X
-xsW/JyxWhJaSQyQhIKHuNI6ciDLbpF5y0mry/I3dievkKPwcEaQp3FkVwAASqrT3
-fTEf7rSKWTWVv32HMcZyBAj8QpyGrph8suMIEzN4xfrHOedzRzo1kWlqgH/TGCUR
-hQwnKdgg1KfN9pZDCfrfYcVmE4OeLaDJicG0o3xvoxi26fnvQeJbr4nT7RyAj21J
-B6t9lSYvjtEzeAu3HTtmWSjcdoyCMCmf6jKegAKdWZDhVNeIktl5cqPQirY0F+6G
-fbBIRM+PJdXAWC4sQB4V
-=qIp+
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir8L0P/0BQA67z2wH40QYVoa/VYRJk
+lKi/jApbDSleTni2uuUiGa4DQii2cZ1LR6bBfp4rdiBKZjZPG975SPKfY8KDddO3
+dUYIpF+1ljXHljhE2NkerqbjEZ+cnBe0bS5eLWO8dVBXZtHoDZGi5PZ5m0hsCvWY
+UanrxTuPNsia7sXk/n0kwOfXGeAc+0WBLHf0hY2SyHVrPznmJe7XsiNG42LszSW3
+W800MQZINXHF66tA7+vTcEvwZttk09n3B8J8Zsiou6oQw8rKFuma8C6AtlvAaeY1
+NkHI5gd2x8gPAPLnUBXA76iWwBL8cyzQI7ptx4eLM8x689dGuSGs6ZT6VdTugTPP
+OBo1GxA2NUUe5hiAR4miezXn/nLj5ns/e5EQ3k8mf/ILnYz3fVTd4adVn8zpHlJr
+3Vj++RMH2vuMtyoWfFE7/mV64+CbPmHMJJ6ykRnxjeDFG7tcnC2JvTeJHD+HXW7U
+YsdTj0R1BCFn/D1Qi+o+T5qpJXpxWE65rsvtn9s8AR8Elo0kH8olv3qdI66fpGzT
+NEleDiqramH7YrOJb8FMebFk0I/F76OLCnhXXTO58hr+RPC02LWdbwVKiYara5J2
+gjhdk9GicM3l3s0ATUgVNhJVcaoU8WSZ1BXQ801qmWyApLAxhHA1kQzRR8frDQ1K
+FM2CTMbg5bJ8pyHJjhCx
+=FM4q
 -----END PGP SIGNATURE-----
